fix: Debugged problems from issue #2 and made some changes accordingly changed python3 path to system updated issw executable path updated README.md

--- a/fn.plist
+++ b/fn.plist
@@ -6,7 +6,7 @@
     <string>fn.py</string>
     <key>ProgramArguments</key>
     <array>
-        <string>/Users/norflin/miniforge3/bin/python</string>
+        <string>/usr/bin/python3</string>
         <string>/Users/norflin/fn.py</string>
     </array>
     <key>KeepAlive</key>
